--- a/cjgammon/02basic3d/package.json
+++ b/cjgammon/02basic3d/package.json
@@ -14,6 +14,7 @@
     "html-webpack-plugin": "^2.30.1",
     "three": "^0.90.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "rxjs": "^5.5.6"
   }
 }
