--- a/cjgammon/02basic3d/package.json
+++ b/cjgammon/02basic3d/package.json
@@ -15,6 +15,7 @@
     "three": "^0.90.0",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
-    "rxjs": "^5.5.6"
+    "rxjs": "^5.5.6",
+    "jquery": "^3.3.1"
   }
 }
